<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="24sp" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_below="@id/tvProfileName"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp
"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallett"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvWallet"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="24sp" />

</LinearLayout>



</RelativeLayout>





