<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:maxLines="2"
        android:padding="10dp"
        android:text="@string/quest"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQuestion"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOption1"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:text="@string/option1"
            android:textColor="@color/black"
            android:textSize="26sp" />


        <TextView
            android:id="@+id/tvOption2"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/option2"
            android:textColor="@color/black"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOption3"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:text="@string/option1"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tvOption4"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/option2"
            android:textColor="@color/black"
            android:textSize="26sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorrectAnswer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:background="@color/white"
            android:text="@string/enter_your_answer" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/submit" />


</RelativeLayout>